# llm-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: v1.py
app/core/: auth.py  config.py  router.py
app/models/: anthropic_client.py  local_model.py  openai_client.py
app/schemas/: prompt.py
app/services/: prompt_utils.py
tests/: test_prompt_api.py
